[package]
name = "RustPyNet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
rustpynet_macros = { path = "rustpynet_macros" }
pyo3 = "0.15"
lazy_static = "1.4"
rand = "0.8.5"
chrono = "0.4"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"