[package]
name = "rustpynet_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
RustPyNet = { path = "../RustPyNet" }
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]