[package]
name = "rustpynet_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
md5 = "0.7"
pyo3 = { version = "0.15", features = ["extension-module"] }
syn = "1.0"
quote = "1.0"
ctor = "0.1"