[package]
name = "RustPyNet"
version = "0.1.0"
edition = "2021"
description = "RustPyNet is a crate designed to help use python inside multiple threads for smal-medium workloads loke calling fast execution callbacks and small-medium operations from multiple places in a orchestrated way, currently RustPyNet is build on top of PyO3 and suport all the PyO3 python operations and for now the basic responses for returning the result of the functions called"
authors = ["Cristian Camargo Filho <ccf@cdone.com.br>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpynet_macros = { path = "../rustpynet_macros" }
md5 = "0.7"
pyo3 = "0.15"
lazy_static = "1.4"
rand = "0.8.5"
chrono = "0.4"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

