[package]
name = "RustPyNet"
version = "0.1.1"
edition = "2021"
description = "RustPyNet is a crate designed to help use python inside multiple threads for small-medium workloads like calling fast execution callbacks and small-medium operations from multiple places in an orchestrated manner. RustPyNet is built on top of PyO3 and supports all PyO3 python operations, including basic responses for returning function results."
authors = ["Cristian Camargo Filho <ccf@cdone.com.br>"]
license = "MIT"  # Assuming MIT, replace with your actual license
homepage = "https://github.com/letalboy/RustPyNet"  # Optional: Replace with your repository URL
documentation = "https://docs.rs/RustPyNet"  # This is automatically set by docs.rs, but you can provide a custom one if needed
categories = ["development-tools::bindings", "python"] # Optional: Categories that fit your crate
keywords = ["python", "threading", "pyo3"]  # Optional: Keywords related to your crate

[dependencies]
rustpynet_macros = "0.1.0"  # Assuming version 0.1.0 after you publish it to crates.io
md5 = "0.7"
pyo3 = "0.15"
lazy_static = "1.4"
rand = "0.8.5"
chrono = "0.4"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
