[package]
name = "rustpynet_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for RustPyNet."
authors = ["Cristian Camargo Filho <ccf@cdone.com.br>"]
license = "MIT"  # Assuming MIT, replace with your actual license
homepage = "https://github.com/letalboy/RustPyNet"  # Optional: Replace with your repository URL
documentation = "https://docs.rs/rustpynet_macros"  # This is automatically set by docs.rs, but you can provide a custom one if needed
categories = ["development-tools::bindings", "python", "development-tools::macros"] # Optional: Categories that fit your crate
keywords = ["python", "proc-macro", "pyo3"]  # Optional: Keywords related to your crate

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
md5 = "0.7"
pyo3 = { version = "0.15", features = ["extension-module"] }
syn = "1.0"
quote = "1.0"
ctor = "0.1"
