[package]
name = "rustpynet_macros"
version = "0.1.2"
edition = "2021"
description = "Procedural macros for RustPyNet."
authors = ["Cristian Camargo Filho <ccf@cdone.com.br>"]
license = "MIT" 
homepage = "https://github.com/letalboy/RustPyNet"  
documentation = "https://docs.rs/rustpynet_macros" 
categories = ["development-tools::bindings", "python", "development-tools::macros"] 
keywords = ["python", "proc-macro", "pyo3"]  

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
md5 = "0.7"
syn = "1.0"
quote = "1.0"
ctor = "0.1"

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]
